Fix issue #766 (Glyphicons have wrong colour)

--- a/profiles/ug/themes/ug/ug_theme/css/base.css
+++ b/profiles/ug/themes/ug/ug_theme/css/base.css
@@ -70,10 +70,6 @@ Base Styles
     cursor:pointer;
   }
   
-  .main-container .fa, .main-container .glyphicon {
-    color:#666666;
-  }
-
   /* hover/focus - underline */
   a:focus, a:hover {
       text-decoration: underline;
